<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/actionDisconnect"
        android:showAsAction="ifRoom"
        android:title="@string/menuDisconnect"/>
    
    <item
        android:id="@+id/actionRandomSettings"
        android:showAsAction="ifRoom"
        android:title="@string/menuRandomSettings"/>
    
    <item
        android:id="@+id/actionLastPlaylist"
        android:showAsAction="ifRoom"
        android:title="@string/menuLastPlaylist"/>
    
    <item
        android:id="@+id/actionShowCurrentPlaylist"
        android:showAsAction="ifRoom"
        android:title="@string/menuShowCurrentPlaylist"/>
    
    <item
        android:id="@+id/actionQuit"
        android:showAsAction="ifRoom"
        android:title="@string/menuQuit"/>
    
    <item
        android:id="@+id/actionPowerTv"
        android:showAsAction="ifRoom"
        android:title="@string/menuPowerTv"/>

</menu>
